fix testcase QLT